Problem-2 CSS-Selectors

--- a/css-selectors/index.html
+++ b/css-selectors/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!--Adjacent Sibling-->
-    <div>
+    <!-- <div>
         <h2>Not applied</h2>
         <p>CSS applied</p>
         <h2>Not applied</div>
@@ -20,8 +20,16 @@
         <p>Not applied</p>
         <h2>Not applied</h2>
         <p>CSS applied</p>
-    </div>
-
-    
+    </div> -->
+    <nav>
+        <a href="#intro" class="active">Intro</a>
+        <a href="#outro">Outro</a>
+    </nav>
+    <section id="intro" class="main-section highlighted">
+        <p>This is the intro section.</p>
+    </section>
+    <section id="outro" class="main-section">
+        <p>This is the outro section.</p>
+    </section>
   </body>
 </html>
